# LoomDRD

./: .gitignore  AGENTS.md  pyproject.toml
Docs/: README.md  loom-backend-plan.md  loom_spec_v0.md  testing-strategy.md
Docs/adr/: 0001-core-backend-python.md  0002-ui-strategy-and-tech-stack.md  0003-delivery-phases.md  0004-base-engine-v0-claude-cli-sim.md
Docs/examples/: brief-technical-philosophical.md  brief-worldspider.md  brief.toml
Docs/outside/DeepResearch/: Project Plan Review_ Loom Phase 0 Implementation.md
loom/: __init__.py  brief.py  cli.py  orchestrator.py
loom/core/: __init__.py  config.py  models.py
loom/generators/: __init__.py  base.py  claude_cli_sim.py  fake.py  prompt.py
loom/io/: __init__.py  manifest.py  persistence.py
tests/: test_brief.py  test_cli.py  test_orchestrator.py
tests/core/: __init__.py  test_config.py  test_models.py
tests/generators/: test_base.py  test_claude_cli_sim.py  test_factory.py  test_fake.py  test_prompt.py
tests/io/: __init__.py  test_manifest.py  test_persistence.py
